Adding the js files and mock data

--- a/index.html
+++ b/index.html
@@ -2,9 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Coffee & Code</title>
+    <script type="text/javascript" src="mockData.js"></script>
+    <script type="text/javascript" src="index.js"></script>
 </head>
 <body>
-
+<div>
+    <h2>Interval</h2>
+    <select id="mySelect">
+        <option value="0">Run Level</option>
+        <option value="1">1 min</option>
+        <option value="2">5 min</option>
+    </select>
+</div>
+<div id="showData"></div>
 </body>
 </html>
